--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,3 +17,13 @@ body {
   color: transparent;
   background-clip: text;
 }
+.hero-area .plyr {
+  width: 1220px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+:root {
+  --plyr-badge-background: red;
+  --plyr-color-main: red !important;
+}
