--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,8 +22,6 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-
-:root {
-  --plyr-badge-background: red;
-  --plyr-color-main: red !important;
+.plyr {
+  border-radius: 10px;
 }
